# aip-project

aip_app/: Cargo.toml
aip_app/src/: app.rs  main.rs
aip_server/: main.py  models.py  req.txt
report/: main.tex
