[package]
name = "aip_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
eframe = "0.33.3"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
